{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 38,
  "lineage": "4a9a49d6-f985-7d0f-47ca-1950b4f1f46f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:512470816897:instance/i-0a533238a747d54e1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a533238a747d54e1",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-0288ad92881809e80",
            "private_dns": "ip-172-31-81-130.ec2.internal",
            "private_ip": "172.31.81.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b1db689566e93877",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f0031cde",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0771b51d059604764"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:512470816897:instance/i-0083b63a898e33418",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0083b63a898e33418",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-0504829ea9594c55e",
            "private_dns": "ip-172-31-91-20.ec2.internal",
            "private_ip": "172.31.91.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0627214ebccec65ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f0031cde",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0771b51d059604764"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:512470816897:instance/i-0a5d29db0d80e07ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a5d29db0d80e07ae",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-013a514cb527547d8",
            "private_dns": "ip-172-31-81-189.ec2.internal",
            "private_ip": "172.31.81.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0acb8988a80cdf384",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f0031cde",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0771b51d059604764"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:512470816897:instance/i-002e5bea1e3c77f02",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-002e5bea1e3c77f02",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-03e2de4efdcfd9276",
            "private_dns": "ip-172-31-83-250.ec2.internal",
            "private_ip": "172.31.83.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f6361af7dfdbae99",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f0031cde",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0771b51d059604764"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:512470816897:instance/i-0b4e34f1964268bfb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b4e34f1964268bfb",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-0893caba733691c16",
            "private_dns": "ip-172-31-95-191.ec2.internal",
            "private_ip": "172.31.95.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084b5c4e6641235a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f0031cde",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0771b51d059604764"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ccb28830b645a41",
            "arn": "arn:aws:ec2:us-east-2:512470816897:instance/i-09e96f607feff55a7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09e96f607feff55a7",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-0377e10aa52254353",
            "private_dns": "ip-172-31-41-187.us-east-2.compute.internal",
            "private_ip": "172.31.41.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a3c5d1f8a38ac087",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b10884fd",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0285cf30812f49d8b"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb_homologacao",
            "aws_security_group.acesso_ssh_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ccb28830b645a41",
            "arn": "arn:aws:ec2:us-east-2:512470816897:instance/i-0e84fb8871d2fc763",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e84fb8871d2fc763",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu-dell",
            "monitoring": false,
            "primary_network_interface_id": "eni-06f43129e6d03cbe5",
            "private_dns": "ip-172-31-27-251.us-east-2.compute.internal",
            "private_ip": "172.31.27.251",
            "public_dns": "ec2-3-17-135-25.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.135.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03b9341625492ba57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f5e4c08f",
            "tags": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0285cf30812f49d8b"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:512470816897:security-group/sg-0771b51d059604764",
            "description": "acesso_ssh",
            "egress": [],
            "id": "sg-0771b51d059604764",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh",
            "name_prefix": null,
            "owner_id": "512470816897",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-79c1ec03"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh_us_east_2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:512470816897:security-group/sg-0285cf30812f49d8b",
            "description": "acesso_ssh",
            "egress": [],
            "id": "sg-0285cf30812f49d8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh",
            "name_prefix": null,
            "owner_id": "512470816897",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-97ae68fc"
          }
        }
      ]
    }
  ]
}